--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/calencare-api:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/calencare-api:latest
 
   deploy-to-aws:
     needs: build-and-test
