--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
       - "5225:8080"
     environment:
       SPRING_APPLICATION_NAME: Calencare-Api
-      SPRING_DATASOURCE_URL: jdbc:sqlserver://calencare.database.windows.net:1433;database=calencare;user=admin;password=Libellus5271;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/calencare
+      SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: Libellus5271
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.microsoft.sqlserver.jdbc.SQLServerDriver
       SPRING_JPA_DEFER_DATASOURCE_INITIALIZATION: true
-      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.SQLServerDialect
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
       SPRING_JPA_SHOW_SQL: true
       SPRING_MAIL_USERNAME: nr.calencare@gmail.com
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_REQUIRED: true
@@ -33,19 +33,22 @@ services:
     networks:
       - calencare
 
-  sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+  mysql:
+    image: mysql:latest  # Imagem do MySQL
     environment:
-      ACCEPT_EULA: Y
-      SA_PASSWORD: Libellus5271  # Senha do SQL Server
-      MSSQL_PID: Developer
+      MYSQL_ROOT_PASSWORD: Libellus5271  # Senha do MySQL
+      MYSQL_DATABASE: calencare  # Nome do banco de dados
     ports:
-      - "1433:1433"
+      - "3306:3306"  # Porta do MySQL
     volumes:
-      - ./data:/var/opt/mssql
+      - mysql_data:/var/lib/mysql  # Persistência dos dados do MySQL
+      - ./Data:/docker-entrypoint-initdb.d  # Script SQL de inicialização (opcional)
     networks:
       - calencare
 
-networks:
-  calencare:
-    driver: bridge
+  networks:
+    calencare:
+      driver: bridge
+
+  volumes:
+    mysql_data:
