--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,27 +7,33 @@ spring.mail.password=fzio pdsn fmyq xlnf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Configuracao do MySQL no container Docker
-#spring.datasource.url=jdbc:mysql://aws_mysql_1:3306/calencare
-#spring.datasource.username=root
-#spring.datasource.password=Libellus5271
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.defer-datasource-initialization=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.show-sql=true
-
 # CONFIGURACAO DO H2
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:calencare
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:calencare
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.defer-datasource-initialization=true
+
+# CONFIGURACAO DO MYSQL NO CONTAINER DOCKER
+spring.datasource.url=jdbc:mysql://44.194.212.65:3306/calencare
+spring.datasource.username=root
+spring.datasource.password=Libellus5271
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
 
 # CONFIGURACAO DE ERRO DO SERVIDOR
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+# Configurações de CORS
+spring.web.cors.allowed-origin-patterns=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 
 # CONFIGURACAO DE CONTEXT PATH
 server.servlet.context-path=/api
