--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.jpa.defer-datasource-initialization=true
 
 # CONFIGURACAO DO MYSQL NO CONTAINER DOCKER
-spring.datasource.url=jdbc:mysql://44.194.212.65:3306/calencare
-spring.datasource.username=root
-spring.datasource.password=Libellus5271
+spring.datasource.url=jdbc:mysql://localhost:3306/calencare
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
